--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
 
     <title>Frontend Mentor | Insure landing page</title>
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
