fix index footer links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"/>
 
     <title>Frontend Mentor | Insure landing page</title>
-    <link rel="stylesheet" href="style1.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
@@ -144,38 +144,38 @@
                 <div class="nav-foot nav-foot1">
                     <h4 class="nav-title">Our company</h4>
                     <ul>
-                        <a href="#"> <li>How we work</li></a>
-                        <a href="#"> <li>Why Insure?</li></a>
-                        <a href="#"> <li>View plans</li></a>
-                        <a href="#"> <li>Reviews</li></a>
+                        <li><a href="#">How we work</a></li>
+                        <li><a href="#">Why Insure?</a></li>
+                        <li><a href="#">View plans</a></li>
+                        <li><a href="#">Reviews</a></li>
                     </ul>
                 </div>
 
                 <div class="nav-foot nav-foot2">
                     <h4 class="nav-title">Help me</h4>
                     <ul>
-                        <a href="#"> <li>FAQ</li></a>
-                        <a href="#"> <li>Terms of use</li></a>
-                        <a href="#"> <li>Privacy policy</li></a>
-                        <a href="#"> <li>Cookies</li></a>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">Terms of use</a></li>
+                        <li><a href="#">Privacy policy</a></li>
+                        <li><a href="#">Cookies</a></li>
                     </ul>
                 </div>
 
                 <div class="nav-foot nav-foot3">
                 <h4 class="nav-title">Contact</h4>
                 <ul>
-                    <a href="#"> <li>Sales</li></a>
-                    <a href="#"> <li>Support</li></a>
-                    <a href="#"> <li>Live chat</li></a>
+                    <li><a href="#">Sales</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">Live chat</a></li>
                 </ul>
                 </div>
 
                 <div class="nav-foot nav-foot4">
                 <h4 class="nav-title">Others</h4>
                 <ul>
-                    <a href="#"> <li>Careers</li></a>
-                    <a href="#"> <li>Press</li></a>
-                    <a href="#"> <li>Licenses</li></a>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Licenses</a></li>
                 </ul>
                 </div>
             </div>
